# gtarma-dl-plus-plus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gtarma-dl-core/: CMakeLists.txt
gtarma-dl-core/include/: models.h  tools.h
gtarma-dl-core/src/: main.cpp  tools.cpp
gtarma-dl-frontend/: MainForm.ui.qml  gtarma-dl.pro  main.cpp  main.qml  progress.h
include/: models.h  tools.h
src/: main.cpp
